--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,9 @@ dependencies = [
     "SQLAlchemy", 
     "pydantic", 
     "sse_starlette",
-    "requests"]
-name = "impostor-app-services"
+    "requests"
+]
+name = "impostor"
 version = "0.1.0"
 authors = [{ name = "Nicola Gentile", email = "nicola.gentile.developer@gmail.com"}]
 
